src/index.css
* {
  box-sizing: border-box;
}

body {
  margin: 0;
  font-family: "Hanken Grotesk", Arial, Helvetica, sans-serif;
  background: #262626;
  color: #d9d9d9;
  padding: 20px;
  font-size: 1rem;
}

main {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

/* Typography */

h1,
h2,
p {
  margin: 0;
  font-size: 1.25rem;
  color: #f9f4da;
  font-weight: 500;
}

.header-title {
  margin-block: .5rem; /*adds margin top and bottom*/
}

.subtitle {
  color: #8e8e8e;
  font-size: .875rem;
  line-height: 1.6;
  max-width: 350px;
  margin: 0 auto;
}

.section-game-status {
  background: #323232;
  padding: 6px 6px;
  border-radius: 4px;
  width: auto; 
  margin-block: 1.5rem;
  min-height: 7.5%;
}

.section-game-status_won {
  background:#10A95B;
}

.section-game-status_lost {
 background: #BA2A2A;
}

@media (min-width: 600px) {
  h1,
  h2,
  p {
  font-size: 1.75rem;
}

  .section-game-status {
    min-width: 450px;
    min-height: 100px;
    padding: 12px 12px;
    margin: 1.5rem auto;
  }
}

.section-language-container {
  margin: 0 auto 36px;
  width: auto;
  display: flex;
  flex-wrap: wrap;
  gap: 5px;
  justify-content: center;
}

@media (min-width: 600px) {
  .section-language-container {
      max-width: 350px;
  }
}

.span-languages {
  font-family: "Hanken Grotesk", Arial, Helvetica, sans-serif;
  font-size: .75rem;
  font-weight: 700;
  padding: .5em 1em;
  border-radius: 3px;
  border: none;
  position: relative; /*added for overlay*/
}

/* Dimmed overlay with skull on "lost" languages */
.span-languages-lost::before {
  content: "💀";
  position: absolute;
  display: flex;
  align-items: center;
  justify-content: center;
  height: 100%;
  width: 100%;
  font-size: 0.85rem;
  top: 0;
  left: 0;
  background-color: rgba(0, 0, 0, 0.7); /*this greys 'out' with an overlay opacity of 70%*/
  z-index: 1;
  pointer-events: none;
}

.section-word-display {
  display: flex;
  gap: 2px;
  justify-content: center;
  margin-bottom: 36px;
} 

.span-current-word {
  width: 40px;
  height: 40px;
  background: #323232;
  border-bottom: 1px solid #f9f4da;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: 700;
  font-size: 1.125rem;
  padding: .5em;
}

.section-keyboard {
  width: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 8px;
  padding-top: 20px;
}

@media (min-width: 600px) {
  .section-keyboard {
      margin: 0 auto;
      max-width: 425px;
  }
}

/* Buttons */

.btn {
  width: 35px;
  height: 35px;
  border-radius: 4px;
  border: 1px solid #d7d7d7;
  cursor: pointer;
  font-family: 'Hanken Grotesk', sans-serif;
  font-weight: 600;
  transition: transform 200ms ease-in-out;
}

.btn:hover,
.btn:focus {
  transform: scale(1.1)
}

.btn-keyboard {
  color: #282726;
  background: #fcba29;
}

.btn-keyboard_correct {
  background: #10A95B;
}

.btn-keyboard_incorrect {
  background: #EC5D49;
}

.btn-new-game {
  margin-top: 36px;
  background: #11B5E5;
  border-radius: 4px;
  padding: 6px 12px;
  min-width: 10em;
  margin-inline: auto; /*to center the button */
}

@media (min-width: 600px) {
  .btn-new-game {
    width: 225px;
    height: 40px;
  }
}

